--- a/css/main.css
+++ b/css/main.css
@@ -129,8 +129,7 @@ nav ul{
     padding: 0;
     margin: auto;
     padding: 4vh 0 0 0;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 nav ul li{
     display: inline-block;
@@ -210,10 +209,8 @@ h1{
 .case-studies{
     size
     -webkit-box-sizing: border-box;
-            -webkit-box-sizing: border-box;
-                    box-sizing: border-box;
-    -webkit-filter: brightness(100%);
-            filter: brightness(100%);
+            box-sizing: border-box;
+    filter: brightness(100%);
     border: 2px white solid;
 }
 #work h3{
@@ -226,8 +223,7 @@ h1{
     background-size: contain;
     height: 400px;
     padding: 5px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 .jib:hover{
     background-image: url(../img/jib-hover.png);    
@@ -238,8 +234,7 @@ h1{
     background-size: contain;
     height: 400px;
     padding: 5px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 .delmar:hover{
     background-image: url(../img/delmar-hover.png);
@@ -250,8 +245,7 @@ h1{
     background-size: contain;
     height: 400px;
     padding: 5px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 .stella:hover{
     background-image: url(../img/stella-hover.png);
@@ -262,14 +256,10 @@ h1{
     background-size: contain;
     height: 400px;
     padding: 5px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 .bch:hover{
     background-image: url(../img/bch-hover.png);
-}
-.study-section{
-    margin-top: 300px;
 }
 .mlr{
     background-image: url(../img/mlr-plain.png);
@@ -277,8 +267,7 @@ h1{
     background-size: contain;
     height: 400px;
     padding: 5px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 .mlr:hover{
     background-image: url(../img/mlr-hover.png);
@@ -289,8 +278,7 @@ h1{
     background-size: contain;
     height: 400px;
     padding: 5px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 .character:hover{
     background-image: url(../img/character-hover.png);
@@ -301,8 +289,7 @@ h1{
     background-size: contain;
     height: 400px;
     padding: 5px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 
 }
 .motion:hover{
@@ -375,10 +362,8 @@ h4{
     z-index: 2;
 }
 .go-back p{
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
-    -webkit-transform-origin: 0;
-            transform-origin: 0;
+    transform: rotate(90deg);
+    transform-origin: 0;
     padding-bottom: 3vw;
     width: 1000px;
     font-size: 1vw;
@@ -480,6 +465,7 @@ h4{
     .hidden-video{
         clear: both;
         visibility: visible;
+        padding-bottom: 0;
     }
     .case-video{
         visibility: hidden;
@@ -489,10 +475,8 @@ h4{
     width: 5vw;
     }
     .go-back p{
-        -webkit-transform: rotate(90deg);
-                transform: rotate(90deg);
-        -webkit-transform-origin: 0;
-                transform-origin: 0;
+        transform: rotate(90deg);
+        transform-origin: 0;
         padding-bottom: 4vw;
         width: 1000px;
         font-size: 2vw;
@@ -562,8 +546,7 @@ h4{
     height: 10vw;
     }
     .go-back p{
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
     padding: 3vw;
     font-size: 15px;
     }
