--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@ nav ul li a{
 #about{
     width: 100%;
     height: 800px;
-    padding-top: 50px;
+    padding-top: 100px;
     background-image: url(../img/about.png);
     background-size: cover;
     background-position: center;
@@ -203,8 +203,8 @@ h1{
   width: 100%;
   height: 100%;
 }
-#work{
-    padding: 5vw;
+#work-1, #work-2{
+    padding: 100px 5vw 5vw 5vw;
 }
 .case-studies{
     size
@@ -213,7 +213,7 @@ h1{
     filter: brightness(100%);
     border: 2px white solid;
 }
-#work h3{
+#work-1 h3, #work-2 h3{
    font-family: "Big Noodle"; 
    color: #033b4d;
 }
